--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(Libft
         ft_isalpha.c
         ft_isdigit.c
         ft_strlen.c
-        ft_toupper.c ft_strrchr.c ft_strncmp.c libft.h ft_isalnum.c ft_isascii.c ft_isprint.c ft_tolower.c ft_atoi.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c ft_memcmp.c ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strnstr.c)
+        ft_toupper.c ft_strrchr.c ft_strncmp.c libft.h ft_isalnum.c ft_isascii.c ft_isprint.c ft_tolower.c ft_atoi.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c ft_memcmp.c ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strnstr.c ft_strdup.c)
 
 add_executable(ft_toupper ft_toupper.c)
 add_executable(ft_strlen ft_strlen.c)
