--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(Libft
         ft_isalpha.c
         ft_isdigit.c
         ft_strlen.c
-        ft_toupper.c ft_strrchr.c ft_strncmp.c libft.h ft_isalnum.c ft_isascii.c ft_isprint.c ft_tolower.c ft_atoi.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c ft_memcmp.c ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strnstr.c ft_strdup.c ft_calloc.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c)
+        ft_toupper.c ft_strrchr.c ft_strncmp.c libft.h ft_isalnum.c ft_isascii.c ft_isprint.c ft_tolower.c ft_atoi.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c ft_memcmp.c ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strnstr.c ft_strdup.c ft_calloc.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_strmapi.c)
 
 add_executable(ft_toupper ft_toupper.c)
 add_executable(ft_strlen ft_strlen.c)
@@ -29,3 +29,4 @@ add_executable(ft_memcmp ft_memcmp.c)
 add_executable(ft_strnstr ft_strnstr.c)
 add_executable(ft_strtrim ft_strtrim.c)
 add_executable(ft_itoa ft_itoa.c)
+add_executable(ft_putnbr_fd ft_putnbr_fd.c)
